Implementado pagina de adicionar usuario.

--- a/static/css/matrix-style.css
+++ b/static/css/matrix-style.css
@@ -25,7 +25,6 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
 .btn, textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input{ box-shadow:none;}
 .progress, .progress-success .bar, .progress .bar-success, .progress-warning .bar, .progress .bar-warning, .progress-danger .bar, .progress .bar-danger, .progress-info .bar, .progress .bar-info, .btn, .btn-primary{background-image:none;}
 .accordion-heading h5{ width:70%; }
-.form-horizontal .form-actions{ padding-left:20px; }
 #footer{ padding:10px; text-align:center;}
 hr{ border-top-color:#dadada;}
 .carousel{ margin-bottom:0px;}
@@ -1118,22 +1117,18 @@ form {
 	margin-bottom: 0;
 }
 .form-horizontal .control-group {
-	border-top: 1px solid #ffffff;
-	border-bottom: 1px solid #eeeeee;
-	margin-bottom: 0;
+	margin-bottom: 10px;
 }
 .form-horizontal .control-group:last-child {
 	border-bottom: 0;
 }
-.form-horizontal .control-label {
-	padding-top: 15px;
-	width: 180px;
-}
 .form-horizontal .controls {
-	margin-left: 200px;
+	display: inline;
 	padding: 10px 0;
 }
 .form-horizontal input[type=text], .form-horizontal input[type=password], .form-horizontal textarea {
+	margin-top: 7px;
+	width: 100%;
 }
 .row-fluid .span20 {
 	width:97.8%
@@ -1144,6 +1139,7 @@ form {
 }
 .help-block, .help-inline {
 	color: #999999;
+	margin-left: 20px;
 }
 /***********light-box***************/
 #lightbox {
@@ -1401,7 +1397,6 @@ form {
 	font-size:12px;
 }
 #sidebar > ul li a i {
-	background-image: url("../img/glyphicons-halflings-white.png");
 	margin-top:4px;
 	vertical-align: top;
 }
@@ -1423,12 +1418,8 @@ form {
 	white-space: nowrap;
 	overflow: hidden;
 }
-.form-horizontal .control-label {
-	padding-left: 30px;
-}
 .form-horizontal .controls {
 	margin-left: 0;
-	padding: 10px 30px;
 }
 .form-actions {
 	text-align: center;
@@ -1544,6 +1535,9 @@ body {
 #sidebar .content{ display:none;}
 }
 @media (max-width: 767px) {
+.stat-boxes, .quick-actions, .quick-actions-horizontal, .stats-plain {
+	display: block	!important;
+}
 body {
 	padding: 0 !important;
 }
