--- a/static/css/matrix-style.css
+++ b/static/css/matrix-style.css
@@ -954,19 +954,16 @@ span.icon .checker {
 .dataTables_length div {
 	vertical-align: middle;
 }
-.dataTables_paginate {
+.center {
+	text-align: center;
+}
+.paginate {
 	line-height: 16px;
 	text-align: right;
-	margin-top: 5px;
-	margin-right: 10px;
+	background-color: #efefef;
+	padding: 10px 10px 10px 0;
 }
-.dataTables_paginate {
-	line-height: 16px;
-	text-align: right;
-	margin-top: 5px;
-	margin-right: 10px;
-}
-.dataTables_paginate .ui-button, .pagination.alternate li a {
+.paginate .ui-button, .pagination.alternate li a {
 	font-size: 12px;
 	padding: 4px 10px !important;
 	border-style: solid;
@@ -979,26 +976,26 @@ span.icon .checker {
 	color: #333333;
 	text-shadow: 0 1px 0 #ffffff;
 }
-.dataTables_paginate .ui-button:hover, .pagination.alternate li a:hover {
+.paginate .ui-button:hover, .pagination.alternate li a:hover {
 	background: #e8e8e8;
 	color: #222222;
 	text-shadow: 0 1px 0 #ffffff;
 	cursor: pointer;
 }
-.dataTables_paginate .first {
+.paginate .first {
 	border-radius: 4px 0 0 4px;
 }
-.dataTables_paginate .last {
+.paginate .last {
 	border-radius: 0 4px 4px 0;
 }
-.dataTables_paginate .ui-state-disabled, .fc-state-disabled, .pagination.alternate li.disabled a {
+.paginate .ui-state-disabled, .fc-state-disabled, .pagination.alternate li.disabled a {
 	color: #AAAAAA !important;
 }
-.dataTables_paginate .ui-state-disabled:hover, .fc-state-disabled:hover, .pagination.alternate li.disabled a:hover {
+.paginate .ui-state-disabled:hover, .fc-state-disabled:hover, .pagination.alternate li.disabled a:hover {
 	background: #f5f5f5;
 	cursor: default !important;
 }
-.dataTables_paginate span .ui-state-disabled, .pagination.alternate li.active a {
+.paginate span .ui-state-disabled, .pagination.alternate li.active a {
 	background: #41BEDD !important;
 	color: #ffffff !important;
 	cursor: default !important;
@@ -1093,7 +1090,6 @@ div.dataTables_wrapper .ui-widget-header {
 	padding: 8px 15px 5px;
 }
 .modal-header h3 {
-	font-size: 12px;
 	text-shadow: 0 1px 0 #ffffff;
 }
 .notify-ui ul {
@@ -1438,7 +1434,7 @@ form {
 .panel-left2 {
 	margin-left:0px;
 }
-.dataTables_paginate .ui-button, .pagination.alternate li a {
+.paginate .ui-button, .pagination.alternate li a {
 	padding:4px 4px!important;
 }
 .table th {
@@ -1567,8 +1563,12 @@ div.dataTables_wrapper .ui-widget-header {
 }
 .dataTables_filter{ position:relative; top:0px;}
 .dataTables_length{ width:100%; text-align:center;}
-.dataTables_filter, .dataTables_paginate {
+.dataTables_filter, .paginate {
 	text-align: center;
 }
 #sidebar .content{ display:none;}
+}
+
+.modal-box {
+	background-color: #f9f9f9;
 }
