--- a/static/css/matrix-style.css
+++ b/static/css/matrix-style.css
@@ -15,6 +15,7 @@ body {
 a{color:#666;}
 a:hover, a:focus {
 	text-decoration: none; color:#28b779;
+	cursor: pointer;
 }
 .dropdown-menu .divider{ margin:4px 0px;}
 .dropdown-menu{ min-width:180px;}
@@ -1579,9 +1580,10 @@ div.dataTables_wrapper .ui-widget-header {
 
 .action-buttons {
 	float: right;
-	padding: 9px;
+	padding: 7px;
 }
 
 .action-buttons a {
 	padding: 0 5px;
+	font-size: 15px;
 }
